--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,7 +8,7 @@
 
 <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark">
-        <a class="navbar-brand" href="#"> <b> SANT MAULI HOSPITAL </b></a>
+        <a class="navbar-brand" href="#"> <b>MAULI HOSPITAL </b></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -48,7 +48,7 @@
             <div class="carousel-item active">
                 <img src="assets/1.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                  <button class="btn btn-secondary btn-lng"><h2>Welcome to SANT MAULI HOSPITAL</h2></button>
+                  <button class="btn btn-secondary btn-lng"><h2>Welcome to  MAULI HOSPITAL</h2></button>
                     <p></p>
                     <button class="btn btn-danger">10000+ Heeling Hands</button>
                     
