--- a/src/app/appointment/appointment.component.html
+++ b/src/app/appointment/appointment.component.html
@@ -1,7 +1,7 @@
 
 <nav style="margin:auto" class="navbar navbar-expand-lg bg-dark">
         
-    <a style="color: white;" class="navbar-brand" href="#">SANT MAULI HOSPITAL</a>
+    <a style="color: white;" class="navbar-brand" href="#">MAULI HOSPITAL</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -32,7 +32,7 @@
         <tr>
             <th>ID</th>
             <th>Name</th>
-            <th>age</th>
+            <th>Age</th>
             <th>Symtomps</th>
             <th>Number</th>
             <th>Action</th>
@@ -48,7 +48,7 @@
            <td>{{appointment.id}}</td>
            <td>{{appointment.name}}</td>
            <td>{{appointment.age}}</td>
-           <td>{{appointment.systomps}}</td>
+           <td>{{appointment.symtomps}}</td>
            <td>{{appointment.number}}</td>
            <td>
 
