--- a/src/app/create-appointment/create-appointment.component.html
+++ b/src/app/create-appointment/create-appointment.component.html
@@ -1,7 +1,7 @@
 
 <nav style="margin:auto" class="navbar navbar-expand-lg bg-dark">
         
-    <a style="color: white;" class="navbar-brand" href="#">SANT MAULI HOSPITAL</a>
+    <a style="color: white;" class="navbar-brand" href="#">MAULI HOSPITAL</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -39,7 +39,7 @@
      <div class="form-group">
 
         <label>Symtomps</label>
-        <input type="text" id="symtomps" class="form-control" name="symtomps" placeholder="Enter Symtomps" [(ngModel)]="appointment.systomps"/>
+        <input type="text" id="symtomps" class="form-control" name="symtomps" placeholder="Enter Symtomps" [(ngModel)]="appointment.symtomps"/>
 
 
      </div>
